tests/ui/fail/empty.rs
use leptos_unique_ids::leptos_unique_ids;

#[leptos_unique_ids]
pub enum Ids {}

fn main() {}
